--- a/activities/second.html
+++ b/activities/second.html
@@ -10,8 +10,10 @@
    <p>1. How do you get help?</p> 
    <p>- Schedule a tutor lab appointment then go to P2.</p>
    <p>2. What time are engagement assignments due? Can you turn them in late? What if you miss one?</p>
-   <p>- same day 11:59pm. yes you can turn them in late but it should be before the class.</p>
+   <p>- same day 11:59pm. You should work on the engagement assignments in class and submit them at the end of class. They will be due at midnight. No late engagement assignments will be accepted.</p>
    <p>3. What time are projects due? Can you turn them in late? What if you miss one?</p>
-   <p> - </p>
+   <p> - You cannot turn in projects late, but you can resubmit up to 4 projects. You must resubmit the projects within one week of the project's due date. </p>
+   <p>4. Why can't you use the https://127.0.0.1 link?</p>
+   <p>- because it's not updated? and it won't work.</p>
 </body>
 </html>
