engagement assignment OL and UL

--- a/activities/list.html
+++ b/activities/list.html
@@ -26,5 +26,38 @@
         <li>Turtle Bay</li>
         <li>Castles</li>
     </ol>
+    <hr>
+    <br>
+    <h2>Here is a list of questions you should answer on the web page you created today.</h2>
+    <ol>
+        <li>Where can we find the lecture notes?</li>
+        <li>When is your project due?</li>
+        <li>What are special entity characters?</li>
+        <li>What are phrase tags?</li>
+        <li>What is the difference between OL and UL tags?</li>
+        <li>What is a DL?</li>
+    </ol>
+    <hr>
+    <br>
+    <h2>Responses</h2>
+    <ol>
+        <li><b>Where can we find the lecture notes?</b></li>
+        <p>&mdash; <i>We can find the lecture notes in the Home page in our Canvas, then go to modules and each week there is a lecture notes for each topic or week.</i></p>
+        <li><b>When is your project due?</b></li>
+        <p>&mdash; <i>Project due is the next day at 5 am.</i></p>
+        <li><b>What are special entity characters?</b></li>
+        <p>&mdash; <i>Characters that starts with &</i></p>
+        <li><b>What are phrase tags?</b></li>
+        <p>&mdash; <i>phrase tags are tags used to <mark>give</mark> meaning and emphasis to small pieces of text within a sentence not to structure the whole page.</i></p>
+        <li><b>What is the difference between OL and UL tags?</b></li>
+        <p>&mdash; <i>OL is an ordered list, items are numbered while UL or unordered list are items shown with bullet points. </i></p>
+        <li><b>What is a DL?</b></li>
+        <p>&mdash; <i>DL stands for Description list. It's used to show terms and their descriptions, instead of bullet points or numbers.</i></p>
+        <p>For example:</p>
+        <dl>
+            <dt>HTML</dt>
+            <dd>A markup language used to create webpages. It stands for HyperText Markup Language. </dd>
+        </dl>
+    </ol>
 </body>
 </html>
