--- a/projects/profile.html
+++ b/projects/profile.html
@@ -13,7 +13,7 @@
     <p>In Construction and Facilities Management, I enjoy building projects and accomplishing goals as part of a team. I am a team player and I am passionate about working with and leading others. At the same time, I value contributing as a responsible team member and supporting group's success.</p>
     <h3>Other Hobbies I like</h3>
     <ol type="A">
-        <li>Playing basketball in my free time</li>
+        <li><a href="../projects/interests/Interests.html">Playing basketball</a> in my free time</li>
         <li>Watching tutorials and learning useful skills</li>
         <li>Playing strategy-based video games</li>
     </ol>
