--- a/projects/Interests/hero.html
+++ b/projects/Interests/hero.html
@@ -32,7 +32,7 @@
 
     </main>
     <footer>
-        &copy; 2026. Gerald's Hero. All Right Reserved.
+        &copy; 2026. Gerald's Hero. All Rights Reserved.
     </footer>
 </body>
 </html>
