Beginning CSS Project

--- a/projects/Interests/Interests.html
+++ b/projects/Interests/Interests.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interests Page</title>
+    <link rel="stylesheet" href="BeginningCSS.css">
 </head>
 <body>
     <Header>
@@ -26,6 +27,29 @@
         <p>Click <a href="../profile.html">here</a> to see an example of relative link. </p>
         <p>Click <a href="https://www.basketball-reference.com/">here </a> to see an example of absolute link.</p>
     </main>
+    <div class="separate">
+    <h2>Color Choices for My Interest Page</h2>
+
+    <ul>
+        <li>
+            <span class="blue">What color did you choose to emphasize text?</span>
+            <br>
+            I chose blue color in bold text because it draws attention to important text.
+        </li>
+
+        <li>
+            <span class="muted">What color did you choose to de-emphasize text?</span>
+            <br>
+            I chose a muted gray and blue color to make less important text calm and easy on the eyes.
+        </li>
+
+        <li>
+            <span class="red">How did you choose your colors?</span>
+            <br>
+            I picked smooth NBA-style colors for readability and a clean look. I used the built-in colors in visual studio where you can select multiple colors. I just chose what colors are good to my eyes. 
+        </li>
+    </ul>
+</div>
     <footer>
         &copy; 2026. Gerald's Interests. All Rights Reserved.
     </footer>
